--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
 flask==2.3.3
-pandas==2.0.3
+pandas>=2.0.0
 numpy==1.24.3
-plotly==5.16.1
+plotly>=5.18.0
 openpyxl==3.1.2
 python-dotenv==1.0.0
 gunicorn==21.2.0
+scikit-learn==1.3.0
+scipy==1.11.2
+matplotlib==3.7.2
+seaborn==0.12.2
+statsmodels==0.14.0
+dash==2.13.0
+dash-bootstrap-components==1.5.0
+SQLAlchemy==2.0.20
+pytest==7.4.0
+streamlit>=1.31.0
